doc/v2.0/_sources/reference/generated/ak.softmax.rst.txt
ak.softmax
----------

.. py:module: ak.softmax

Defined in `awkward.operations.ak_softmax <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_softmax.py>`__ on `line 11 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_softmax.py#L11>`__.

.. py:function:: ak.softmax(x, axis=None, *, keepdims=False, mask_identity=False, flatten_records=unset)


    :param x: The data on which to compute the softmax (anything :py:obj:`ak.to_layout` recognizes).
    :param axis: If None, combine all values from the array into
             a single scalar result; if an int, group by that axis: ``0`` is the
             outermost, ``1`` is the first level of nested lists, etc., and
             negative ``axis`` counts from the innermost: ``-1`` is the innermost,
             ``-2`` is the next level up, etc.
    :type axis: None or int
    :param keepdims: If False, this function decreases the number of
                 dimensions by 1; if True, the output values are wrapped in a new
                 length-1 dimension so that the result of this operation may be
                 broadcasted with the original array.
    :type keepdims: bool
    :param mask_identity: If True, the application of this function on
                      empty lists results in None (an option type); otherwise, the
                      calculation is followed through with the reducers' identities,
                      usually resulting in floating-point ``nan``.
    :type mask_identity: bool

Computes the softmax in each group of elements from ``x`` (many
types supported, including all Awkward Arrays and Records). The grouping
is performed the same way as for reducers, though this operation is not a
reducer and has no identity.

This function has no NumPy equivalent.

Passing all arguments to the reducers, the softmax is calculated as

.. code-block:: python


    np.exp(x) / ak.sum(np.exp(x))

See :py:obj:`ak.sum` for a complete description of handling nested lists and
missing values (None) in reducers, and :py:obj:`ak.mean` for an example with another
non-reducer.

